# rust-naperian

./: Cargo.toml
src/: aliases.rs  align.rs  common.rs  compat.rs  const_aliases.rs  fin.rs  helper.rs  hyper.rs  hyper2.rs  lib.rs  paper.rs  v1.rs  v2.rs
src/functional/: array.rs  hlist.rs  mod.rs  pair.rs  tlist.rs
src/hyper/: ops.rs
src/hyper2/: prism.rs  scalar.rs  shape_of.rs  tensor.rs
src/v2/: fin.rs
