[package]
name = "naperian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.30"
# generic-array = "0.14.6"
generic-array = { git = "https://github.com/fizyk20/generic-array.git", branch = "1.0" }
sealed = "0.4.0"
static_assertions = "1.1.0"
typ = "0.1.1"
typenum = { version = "1.16.0", features = ["const-generics"] }
